# FeedbackMemoSite

./: .gitignore  API_QUICK_REFERENCE.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  REFACTORING_COMPLETE.md  VERIFICATION_CHECKLIST.md  feedback.db  jose.py  package-lock.json  render.yaml  requirements.txt
.github/agents/: production-migration.agent.md
backend/: ARCHITECTURE.md  Dockerfile  app.py  feedback.db  model_utils.py  pyproject.toml  requirements.txt  setup_postgres_dev.sh  test.db
backend/core/: database.py  security.py
backend/models/: feedback.py  user.py
backend/repositories/: feedback_repo.py  user_repo.py
backend/routers/: auth.py  feedback.py
backend/schemas/: __init__.py  feedback.py  user.py
backend/services/: auth_service.py  feedback_service.py
backend/src/: app.py
backend/utils/: database.py  security.py
fbmemo-client/: index.html  package-lock.json  package.json
fbmemo-client/src/: App.tsx  main.tsx
feedbackapi/: docker-compose.yml  pyproject.toml  pytest.ini
feedbackapi/src/feedbackapi/: crud.py  db.py  main.py  models.py  schemas.py  settings.py
feedbackapi/tests/: conftest.py  test_crud.py  test_main.py
feedbackmodel/: main.py  metadata.json  metadata_train.tsv
feedbackmodel/.ipynb_checkpoints/: embeddings-checkpoint.ipynb
feedbackmodel/active_learning/: model.py
feedbackmodel/curation/: dimension_label_proposal.py  human_labeling.py  labeling_session.py  metadata.py  (+7 more)
feedbacksite/: pom.xml
frontend/: .env.example  package-lock.json  package.json  tree_output.txt  vite.config.js  vitest.config.js
(+147 files in other folders)
